--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@ Then start the game
 <h3>How to install game</h3>
 <p>Copy-paste to terminal</p>
 <pre>curl -L http://cs.helsinki.fi/u/tmtynkky/hon.tar.xz | xz -d | tar x -C /var/tmp && chmod a+rwx /var/tmp/HoN</pre>
+<p>Give permissions to everyone just in case you are not in same PC on next day.</p>
+<pre>chmod 777 -R /var/tmp/*</pre>
 
 <h3>How to run bot games</h3>
 
