--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@ End summary about group working:
 </ul>
 
 <h3>How to start hon bot project</h3>
-<pre>
-Fork the repository https://github.com/tkt-hon/midwars 
-Clone the forked repository inside your home directory
-Create symlink so that games game/bots directory points to forked repository
-Then start the game
-</pre>
+<p>Fork the repository <a href="https://github.com/tkt-hon/midwars">https://github.com/tkt-hon/midwars</a></p>
+<p>Clone the forked repository inside your home directory</p>
+<p>Create symlink so that games game/bots directory points to forked repository</p>
+<pre>ln -s ~/path/to/repo game/bots</pre>
+<p>Then start the game</p>
+<pre>./hon.sh</pre>
 
 <h3>How to install game</h3>
 <p>Copy-paste to terminal</p>
